[package]
name = "gush"
version = "0.1.0"
authors = ["Justin Hurst <JryanhHurst@gmail.com>"]

[lib]
name = "gush"
path = "src/lib.rs"

[dependencies]
glium = "0.18.0"
winit = "0.8"

cgmath = "0.15.0"
image = "0.15.0"

[dependencies.gltf]
version = "0.9.2"
features = ["names"]

[dependencies.gltf-importer]
version = "0.9.2"

[dependencies.gltf-utils]
version = "0.9.2"